fix invisible click

--- a/src/scss/components/_jumbotron.scss
+++ b/src/scss/components/_jumbotron.scss
@@ -58,6 +58,10 @@
           transform: scale(1.1);
         }
 
+        a {
+          pointer-events: none;
+        }
+
         img {
           width: 100%;
           height: 100%;
